# pet-esp

./: .gitignore  README.md
docs/: architecture.md  design.md  gene_spec.md  radio_protocol.md  sprite_format.md  sprite_style_guide.md
docs/previews/: README.md
firmware/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/assets/: README.md
firmware/components/audio/: CMakeLists.txt  audio.c
firmware/components/audio/include/: audio.h
firmware/components/pet_state/: CMakeLists.txt  pet_state.c
firmware/components/pet_state/include/: pet_state.h
firmware/components/power/: CMakeLists.txt  power.c
firmware/components/power/include/: power.h
firmware/components/radio/: CMakeLists.txt  radio.c
firmware/components/radio/include/: radio.h
firmware/components/renderer/: CMakeLists.txt  renderer.c
firmware/components/renderer/include/: renderer.h  renderer_emotes.h
firmware/components/ui/: CMakeLists.txt  ui.c
firmware/components/ui/include/: food_items.h  ui.h  ui_buttons.h  ui_icons.h  ui_scenes.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/src/: main.c
sprite_forge/: README.md  build.py  emotes_to_c.py  forge_common.py  icons_to_c.py  items_to_c.py  make_palettes.py  preview.py  preview_scene.py  prototype_hires.py  random_grid.py  requirements.txt  scenes_to_c.py  ui_buttons_to_c.py
sprite_forge/palettes/: .gitkeep
sprite_forge/parts/: .gitkeep
sprite_forge/parts/baby/body/chubby/: anchors.json
sprite_forge/parts/baby/body/pear/: anchors.json
sprite_forge/parts/baby/body/round/: anchors.json
sprite_forge/parts/baby/body/tall/: anchors.json
sprite_forge/parts/baby/body/wide/: anchors.json
